--- a/service_area_mozio/service_area_mozio/site/templates/bootstrap.html
+++ b/service_area_mozio/service_area_mozio/site/templates/bootstrap.html
@@ -6,6 +6,9 @@
 #map {
     height: 500px;
 }
+#info {
+    height: 200px;
+}
 </style>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 {% endblock %}
