--- a/service_area_mozio/service_area_mozio/site/templates/home.html
+++ b/service_area_mozio/service_area_mozio/site/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
-{% block title %}django-bootstrap3{% endblock %}
+{% block title %}Mozio test by Javier Romero{% endblock %}
 
 {% block content %}
-    This is <em>bootstrap3</em> for <strong>Django</strong>.
+    {% trans "This is a Mozio test. Click on the navbar to see each functionality." %}
 {% endblock %}
