Improve usage instructions

--- a/service_area_mozio/service_area_mozio/site/templates/service_area.html
+++ b/service_area_mozio/service_area_mozio/site/templates/service_area.html
@@ -8,7 +8,7 @@
       {% trans "Select the polygon figure on the map and click anywhere on it to start drawing a new service area. Click on the starting point to end the area." %}
     </p>
     <p>
-      {% trans "You can move the areas around or edit them by clicking on them and moving its vertexs. Click on the map to deselect the areas." %}
+      {% trans "You can move the areas around or edit them by clicking on them and moving its vertices. Click on the map to deselect the areas." %}
     </p>
     <div id="map"></div>
     <div id="toolbar">
