--- a/service_area_mozio/service_area_mozio/site/templates/service_area.html
+++ b/service_area_mozio/service_area_mozio/site/templates/service_area.html
@@ -48,6 +48,9 @@
             <h3>
               {% trans "Latest service areas" %}
             </h3>
+            <div>
+              <ul id="latest-areas" class="list-unstyled"></ul>
+            </div>
           </div>
         </div>
       </div>
@@ -56,6 +59,7 @@
 
 {% block bootstrap3_extra_script %}
 <script>
+var map;
 var selectedShape;
 
 function clearSelection() {
@@ -110,7 +114,7 @@ function drawPolygonCoords(shape) {
 }
 
 function initMap() {
-  var map = new google.maps.Map(document.getElementById('map'), {
+  map = new google.maps.Map(document.getElementById('map'), {
     center: {lat: -34.397, lng: 150.644},
     zoom: 8
   });
@@ -211,6 +215,67 @@ function deleteSelection(){
   clearSelection();
 }
 $('#delete-button').on('click', deleteSelection);
+
+function drawSavedAreas(object){
+  $.each(object, function(index, value){
+    console.log(value);
+    var id = value.id;
+    var date = new Date(value.date_created);
+    $('#latest-areas').append(
+      '<li>'+
+        '<div class="checkbox">'+
+          '<label>'+
+            '<input type="checkbox" id="area-'+id+'" value="'+value.id+'" class="checkbox-area"> '+
+              date.toLocaleString()+' '+value.name+
+            '</label>'+
+        '</div>'+
+      '</li>'
+    );
+    $('#area-'+id).on('click', function(event){
+      renderSavedArea(event, value);
+    });
+  });
+}
+
+function renderSavedArea(event, object){
+  // Define the LatLng coordinates for the polygon.
+  var areaCoords = [];
+  $.each(object.vertices, function(index, value){
+    areaCoords.push({lat: parseFloat(value.lat), lng: parseFloat(value.lon)});
+  });
+
+  // Construct the polygon.
+  var area = new google.maps.Polygon({
+    paths: areaCoords,
+    strokeColor: '#FF0000',
+    strokeOpacity: 0.8,
+    strokeWeight: 3,
+    fillColor: '#FF0000',
+    fillOpacity: 0.35,
+    draggable: true,
+    editable: true,
+    zIndex: 1,
+    geodesic: true
+  });
+  // area.setMap(map);
+  if ( $(event.target).is(':checked') ){
+    area.setMap(map);
+    setSelection(area);
+  } else {
+    area.setMap(null);
+  }
+}
+
+$(document).ready(function(){
+  var urlList = "{% url 'shapes:list' %}";
+  $.getJSON(urlList)
+    .success(function(data){
+      drawSavedAreas(data);
+    })
+    .fail(function(data){
+      console.error("fail!");
+    });
+});
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCG-m2MOrO0REyi3pZjsuKfcFOfrcTOXEQ&signed_in=true&libraries=drawing&callback=initMap"
          async defer></script>
