--- a/service_area_mozio/service_area_mozio/site/templates/service_area.html
+++ b/service_area_mozio/service_area_mozio/site/templates/service_area.html
@@ -7,7 +7,7 @@
     <div class="row">
       <div class="col-md-8">
         <p>
-          {% trans "Select the polygon figure on the map and click anywhere on it to start drawing a new service area. Click on the starting point to end the area." %}
+          {% trans "Select the polygon figure on the map toolbar and click anywhere on it to start drawing a new service area. Click on the starting point to end the area." %}
         </p>
         <p>
           {% trans "You can move the areas around or edit them by clicking on them and moving its vertices. Click on the map to deselect the areas." %}
@@ -61,6 +61,7 @@
 <script>
 var map;
 var selectedShape;
+var savedShapes = {};
 
 function clearSelection() {
   if (selectedShape) {
@@ -231,7 +232,6 @@ function getSavedAreas(){
 function drawSavedAreas(object){
   var htmlStr = "";
   $.each(object, function(index, value){
-    console.log(value);
     var id = value.id;
     var date = new Date(value.date_created);
     htmlStr += ''+
@@ -252,7 +252,7 @@ function drawSavedAreas(object){
 
 function renderSavedArea(event, object){
   // Define the LatLng coordinates for the polygon.
-  var areaCoords = [];
+  var areaCoords = new Array();
   $.each(object.vertices, function(index, value){
     areaCoords.push({lat: parseFloat(value.lat), lng: parseFloat(value.lon)});
   });
@@ -272,6 +272,7 @@ function renderSavedArea(event, object){
   });
   // area.setMap(map);
   if ( $(event.target).is(':checked') ){
+    savedShapes[object.id] = area;
     area.setMap(map);
 
     google.maps.event.addListener(area, 'click', function() {
@@ -291,6 +292,7 @@ function renderSavedArea(event, object){
       drawPolygonCoords(area);
     });
   } else {
+    area = savedShapes[$(event.target).val()];
     area.setMap(null);
   }
 }
