--- a/service_area_mozio/service_area_mozio/site/templates/service_area.html
+++ b/service_area_mozio/service_area_mozio/site/templates/service_area.html
@@ -5,7 +5,7 @@
 
 {% block content %}
     <div class="row">
-      <div class="col-md-8">
+      <div class="col-md-12">
         <p>
           {% trans "Select the polygon figure on the map toolbar and click anywhere on it to start drawing a new service area. Click on the starting point to end the area." %}
         </p>
@@ -13,7 +13,6 @@
           {% trans "You can move the areas around or edit them by clicking on them and moving its vertices. Click on the map to deselect the areas." %}
         </p>
       </div>
-      <div class="col-md-4"></div>
       <div id="map" class="col-md-8"></div>
       <div id="toolbar" class="col-md-4">
         <div class="row">
@@ -28,7 +27,7 @@
               <tbody id="info">
                 <tr>
                   <td colspan="2">
-                    {% trans "Draw a polygon and its vertices' coordinates will show up here" %}
+                    {% trans "Select or Draw a polygon and its vertices coordinates will show up here" %}
                   </td>
                 </tr>
               </tbody>
@@ -69,7 +68,12 @@ function clearSelection() {
     selectedShape = null;
   }
   // Direct DOM manipulation examples
-  document.getElementById('info').innerHTML = "";
+  document.getElementById('info').innerHTML = ''+
+    '<tr>'+
+      '<td colspan="2">'+
+        '{% trans "Select or Draw a polygon and its vertices coordinates will show up here" %}'+
+      '</td>'+
+    '</tr>';
   document.getElementById('save-button').setAttribute('disabled', 'disabled');
   document.getElementById('delete-button').setAttribute('disabled', 'disabled');
 }
@@ -293,7 +297,8 @@ function renderSavedArea(event, object){
     });
   } else {
     area = savedShapes[$(event.target).val()];
-    area.setMap(null);
+    selectedShape = area;
+    deleteSelection();
   }
 }
 
