--- a/service_area_mozio/service_area_mozio/site/templates/service_area.html
+++ b/service_area_mozio/service_area_mozio/site/templates/service_area.html
@@ -228,6 +228,22 @@ $('#save-button').on('click', saveSelection);
 function deleteSelection(){
   deleteSelectedShape();
   clearSelection();
+  // Check if the selecte shape is a saved one and remove it
+  var checkedAreas = $('#latest-areas .checkbox-area:checked')
+  $.each(checkedAreas, function(index, value){
+    console.log(value);
+    var areaId = $(value).val();
+    if ( saveSelection[areaId] == selectedShape ){
+      var urlDelete = '/shapes/delete/'+areaId+'/';
+      $.post(urlDelete)
+      .success(function(data){
+        getSavedAreas();
+      })
+      .fail(function(data){
+        console.error("fail!");
+      });
+    }
+  });
 }
 $('#delete-button').on('click', deleteSelection);
 
@@ -320,6 +336,36 @@ function renderSavedArea(event, object){
     deleteSelection();
   }
 }
+
+// using jQuery
+function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie != '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+var csrftoken = getCookie('csrftoken');
+
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+$.ajaxSetup({
+    beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+    }
+});
 
 $(document).ready(function(){
   getSavedAreas();
